<resources>
    <string name="app_name">Meal Master</string>
    <string name="button_icon">Button Icon</string>
    <string name="onboarding_one_title">Thousands of tested recipes</string>
    <string name="onboarding_one_body">There is no need to fear failure. Tested recipes are guaranteed to work by our professional chefs.</string>
    <string name="onboarding_two_body">Take control of your meals! Plan your weekly menu effortlessly, explore delicious meal categories, and get personalized meal suggestions—all in one place.</string>
    <string name="onboarding_two_title"><![CDATA[Stay Organized & Eat Healthy]]></string>
    <string name="onboarding_three_title"><![CDATA[Find & Save Your Favorite Meals]]></string>
    <string name="onboarding_three_body">Search meals using multiple filters and save your favorites to access them anytime—even without an internet connection! Meal planning has never been this simple.</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_icon">Back Icon</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_error_msg">Full name can\'t be less than 3 characters</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_is_invalid">Email address is invalid</string>
    <string name="password">Password</string>
    <string name="password_error_msg">Password can\'t be less than 8 charachters</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="skip">Skip</string>
    <string name="already_a_member">Already a member?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="not_a_member">Not a member?</string>
    <string name="default_web_client_id">889662514827-buamf1aeug2k046f9v9iad3hcl2knbp4.apps.googleusercontent.com</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_error">Password must match confirm password</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="plans">Plans</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome, 👋🏻</string>
    <string name="chef_s_surprise_try_this">Chef\'s Surprise: Try This!</string>
    <string name="meat_free_magic">Meat-Free Magic!</string>
    <string name="heavenly_desserts">Heavenly Desserts!</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="video">Video</string>
    <string name="search_meals">Search Meals...</string>
    <string name="search_results">Search Results</string>
    <string name="no_results_found">No Results Found</string>
    <string name="oops_nothing_here">Oops! Nothing Here</string>
    <string name="we_couldn_t_find_any_matches_try_a_different_keyword">We couldn’t find any matches. Try a different keyword!</string>
    <string name="start_searching">Start Searching</string>
    <string name="type_something_to_find_what_you_re_looking_for">Type something to find what you\'re looking for!</string>
    <string name="explore">Explore</string>
    <string name="by_category">By Category</string>
    <string name="by_area">By Area</string>
    <string name="by_ingredient">By Ingredient</string>
    <string name="search_for">Search For...</string>
    <string name="ingredient">Ingredient</string>
    <string name="area">Area</string>
    <string name="category">Category</string>
    <string name="saved_meals">Saved Meals</string>
    <string name="no_saved_meals_yet">No Saved Meals Yet!</string>
    <string name="saved_meals_empty_state_des">Browse delicious recipes and save your favorites to find them easily later!</string>
    <string name="oops_feature_unavailable">Oops! Feature Unavailable</string>
    <string name="login_required_des">This feature is only available for registered users. Sign up or log in to enjoy this feature!</string>
    <string name="your_plans">Your Plans</string>
    <string name="fri">Fri</string>
    <string name="thr">Thr</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="mon">Mon</string>
    <string name="sun">Sun</string>
    <string name="sat">Sat</string>
    <string name="your_meal_plan_is_empty">Your Meal Plan is Empty</string>
    <string name="planned_meals_empty_state_des">Start planning your meals and make cooking easier!</string>
    <string name="planned_meal">Planned Meal</string>
    <string name="dash">-</string>
    <string name="backup">Backup</string>
    <string name="logout">Logout</string>
    <string name="logout_warning">Ensure you back up your data before logging out, as it will be lost without a backup.</string>
    <string name="cancel">Cancel</string>
    <string name="categories">Categories</string>
    <string name="areas">Areas</string>
    <string name="no_internet_connection_available">No internet connection available</string>
    <string name="meal_unsaved_successfully">Meal unsaved successfully</string>
    <string name="undo">Undo</string>
</resources>