<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="com.ewida.mealmaster.utils.enums.FormErrors"/>
        <variable
            name="presenter"
            type="com.ewida.mealmaster.auth.register.RegisterPresenter" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            tools:context=".auth.register.RegisterFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back_icon"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toTopOf="@+id/glTop"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/textView"
                style="@style/largeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/sign_up"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/ivBack" />

            <TextView
                android:id="@+id/tvNameLabel"
                style="@style/largeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/full_name"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:importantForAutofill="no"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/full_name"
                android:textCursorDrawable="@drawable/edit_text_cursor"
                android:background='@{presenter.getFormErrors().contains(FormErrors.INVALID_NAME) ? @drawable/edit_text_error_background : @drawable/edit_text_background  }'
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toStartOf="@+id/glEnd"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@id/tvNameLabel" />

            <TextView
                android:id="@+id/tvNameError"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility='@{presenter.getFormErrors().contains(FormErrors.INVALID_NAME)?View.VISIBLE:View.GONE}'
                tools:visibility="visible"
                android:text="@string/full_name_error_msg"
                android:textColor="@color/errorColor"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/etFullName" />

            <TextView
                android:id="@+id/tvEmailLabel"
                style="@style/largeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/email_address"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/tvNameError" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:importantForAutofill="no"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:textCursorDrawable="@drawable/edit_text_cursor"
                android:background='@{presenter.getFormErrors().contains(FormErrors.INVALID_EMAIL) ? @drawable/edit_text_error_background : @drawable/edit_text_background  }'
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toStartOf="@+id/glEnd"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@id/tvEmailLabel" />

            <TextView
                android:id="@+id/tvEmailError"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility='@{presenter.getFormErrors().contains(FormErrors.INVALID_EMAIL)?View.VISIBLE:View.GONE}'
                tools:visibility="visible"
                android:text="@string/email_address_is_invalid"
                android:textColor="@color/errorColor"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <TextView
                android:id="@+id/tvPasswordLabel"
                style="@style/largeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/tvEmailError" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/primaryColor"
                android:layout_marginTop="8dp"
                app:boxBackgroundMode="none"
                app:cursorColor="@color/primaryColor"
                app:layout_constraintEnd_toStartOf="@+id/glEnd"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/tvPasswordLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/password"
                    android:background='@{presenter.getFormErrors().contains(FormErrors.INVALID_PASSWORD) ? @drawable/edit_text_error_background : @drawable/edit_text_background}'
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvPasswordError"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility='@{presenter.getFormErrors().contains(FormErrors.INVALID_PASSWORD)?View.VISIBLE:View.GONE}'
                tools:visibility="visible"
                android:text="@string/password_error_msg"
                android:textColor="@color/errorColor"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout" />

            <com.ewida.mealmaster.app_components.AppButton
                android:id="@+id/btnCreateAccount"
                android:layout_width="0dp"
                android:layout_height="56dp"
                app:btnText="@string/create_an_account"
                app:btnDisabledBackgroundRes="@drawable/disabled_app_btn_background"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toStartOf="@+id/glEnd"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/tvPasswordError" />

            <ImageView
                android:id="@+id/ivOr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                app:layout_constraintEnd_toStartOf="@+id/glEnd"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/btnCreateAccount"
                app:srcCompat="@drawable/ic_or" />

            <com.ewida.mealmaster.app_components.AppButton
                android:id="@+id/btnGoogleRegister"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                app:btnTextColor="@color/onBackgroundColor"
                app:btnIcon="@drawable/ic_google"
                app:btnDisabledBackgroundRes="@drawable/google_auth_disabled_background"
                app:btnBackgroundRes="@drawable/google_auth_background"
                app:btnText="@string/sign_up_with_google"
                app:layout_constraintEnd_toStartOf="@+id/glEnd"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@id/ivOr" />

            <com.ewida.mealmaster.app_components.AppButton
                android:id="@+id/btnFacebookRegister"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="14dp"
                android:visibility="gone"
                app:btnIcon="@drawable/ic_facebook"
                app:btnText="Sign up with Facebook"
                app:btnTextColor="@color/white"
                app:btnBackgroundRes="@drawable/facebook_auth_background"
                app:layout_constraintEnd_toStartOf="@+id/glEnd"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@id/btnGoogleRegister" />

            <TextView
                android:id="@+id/btnSkip"
                style="@style/mediumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/glEnd"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/tvAlreadyMember" />

            <TextView
                android:id="@+id/tvAlreadyMember"
                style="@style/smallTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-8dp"
                android:layout_marginTop="16dp"
                android:text="@string/already_a_member"
                android:textColor="@color/onBackgroundVariantColor"
                app:layout_constraintEnd_toStartOf="@+id/glEnd"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toBottomOf="@+id/btnFacebookRegister" />

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                style="@style/mediumLabel"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvAlreadyMember"
                app:layout_constraintStart_toEndOf="@+id/tvAlreadyMember"
                app:layout_constraintTop_toTopOf="@+id/tvAlreadyMember" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>

