<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".search.view.SearchActivity">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuidLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuidLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="24dp" />


        <EditText
            android:id="@+id/etSearch"
            style="@style/normalText"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@drawable/search_bar_bg"
            android:drawableEnd="@drawable/ic_home_search"
            android:hint="@string/search_meals"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toStartOf="@+id/endGuidLine"
            app:layout_constraintStart_toStartOf="@+id/startGuidLine"
            app:layout_constraintTop_toTopOf="@+id/topGuideLine" />

        <TextView
            android:id="@+id/tvResultsLabel"
            style="@style/mediumTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/search_results"
            android:textColor="@color/onBackgroundColor"
            app:layout_constraintStart_toStartOf="@+id/startGuidLine"
            app:layout_constraintTop_toBottomOf="@+id/etSearch" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchResults"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/endGuidLine"
            app:layout_constraintStart_toStartOf="@+id/startGuidLine"
            app:layout_constraintTop_toBottomOf="@+id/tvResultsLabel"
            app:spanCount="2"
            tools:listitem="@layout/search_result_item" />

        <LinearLayout
            android:id="@+id/emptyState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/rvSearchResults"
            app:layout_constraintEnd_toStartOf="@+id/endGuidLine"
            app:layout_constraintStart_toStartOf="@+id/startGuidLine"
            app:layout_constraintTop_toTopOf="parent">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="250dp"
                android:layout_height="250dp"
                app:layout_constraintEnd_toStartOf="@+id/endGuidLine"
                app:layout_constraintStart_toStartOf="@+id/startGuidLine"
                app:layout_constraintTop_toBottomOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/empty_search_anim" />

            <TextView
                style="@style/mediumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oops_nothing_here"
                android:textColor="@color/onBackgroundColor" />

            <TextView
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/we_couldn_t_find_any_matches_try_a_different_keyword"
                android:textAlignment="center"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emptyQueryState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/rvSearchResults"
            app:layout_constraintEnd_toStartOf="@+id/endGuidLine"
            app:layout_constraintStart_toStartOf="@+id/startGuidLine"
            app:layout_constraintTop_toTopOf="parent">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="250dp"
                android:layout_height="250dp"
                app:layout_constraintEnd_toStartOf="@+id/endGuidLine"
                app:layout_constraintStart_toStartOf="@+id/startGuidLine"
                app:layout_constraintTop_toBottomOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/empty_query_anim" />

            <TextView
                style="@style/mediumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_searching"
                android:textColor="@color/onBackgroundColor" />

            <TextView
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/type_something_to_find_what_you_re_looking_for"
                android:textAlignment="center"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progressBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/endGuidLine"
            app:layout_constraintStart_toStartOf="@+id/startGuidLine"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_anim" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>