<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="40dp"
        android:minWidth="350dp">

        <TextView
            android:id="@+id/tvLogoutLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/largeTitle"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textColor="@color/errorColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivWarning"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            app:srcCompat="@drawable/ic_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogoutLabel" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/normalText"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="-4dp"
            android:text="@string/logout_warning"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivWarning"
            app:layout_constraintTop_toTopOf="@+id/ivWarning" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17">

            <com.ewida.mealmaster.app_components.AppButton
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                app:btnTextColor="@color/primaryColor"
                app:btnBackgroundRes="@drawable/disabled_app_btn_background"
                app:btnText="@string/cancel" />

            <com.ewida.mealmaster.app_components.AppButton
                android:id="@+id/logoutBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                app:btnBackgroundRes="@drawable/logout_btn_bg"
                app:btnText="@string/logout" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>